Add per-flashcard overrides.
I've temporarily demonstrated using
03a_meta-algorithms_dynamic-programming, in which the first flashcard
overrides _modelName_ to "BasicMathJax".

--- a/Code/Algorithms/Books/AlgorithmsForInterviews/03a_meta-algorithms_dynamic-programming.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/03a_meta-algorithms_dynamic-programming.yml
@@ -13,7 +13,8 @@ markdownTabLength: 4
 notes:
 
 
-- fields:
+- modelName: BasicMathJax
+  fields:
     Front: |
       ## 03.01: Longest nondecreasing subsequence
 
