Undo temp _modelName_ override in 03a_meta-algorithms_dynamic-programming

--- a/Code/Algorithms/Books/AlgorithmsForInterviews/03a_meta-algorithms_dynamic-programming.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/03a_meta-algorithms_dynamic-programming.yml
@@ -13,8 +13,7 @@ markdownTabLength: 4
 notes:
 
 
-- modelName: BasicMathJax
-  fields:
+- fields:
     Front: |
       ## 03.01: Longest nondecreasing subsequence
 
