--- a/Code/Algorithms/facts.yml
+++ b/Code/Algorithms/facts.yml
@@ -9,11 +9,12 @@ markdownTabLength: 4
 notes:
 
 
-- Front: |
-    What are some uses of binary search trees?
+- fields:
+    Front: |
+      What are some uses of binary search trees?
 
-  Back: |
-    - Search for a key.
-    - Find min and max elements.
-    - Look for successor or predecessor of a given search key.
-    - Enumerate the elements in a sorted order.
+    Back: |
+      - Search for a key.
+      - Find min and max elements.
+      - Look for successor or predecessor of a given search key.
+      - Enumerate the elements in a sorted order.
